--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/woong0300/nodeJS-concept-App#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "sanitize-html": "^1.22.1"
   }
 }
